# cu-stm32h743-usb-msc-rs

./: Cargo.toml  README.md  build.rs  justfile  memory.x
.cargo/: config.toml
src/: main.rs
