[package]
name = "cu-stm32h743-usb-msc"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume BINET"]
description = "USB Mass Storage device exposing SD card as block device for the stm32h743v like the MicoAir H743 flight controller."
license = "Apache2"

[dependencies]
# Cortex-M runtime
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

# STM32H7 HAL with required features
# stm32h743v implies rm0433 which enables USB2 (OTG2_HS) on PA11/PA12
stm32h7xx-hal = { version = "0.16", features = [
    "stm32h743v",
    "rt",
    "usb_hs",
    "sdmmc",
]}

# USB stack
usb-device = "0.3"
synopsys-usb-otg = { version = "0.4", features = ["hs"] }

# USB Mass Storage
usbd-storage = { version = "2.0", features = ["bbb", "scsi"] }

# Debugging
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true  # Keep debug info for DFU debugging

[profile.dev]
opt-level = 1  # Some optimization for dev builds

[[bin]]
name = "sdcard-usb-msc"
path = "src/main.rs"
test = false
bench = false
